...
        return alert
    }
    
    private var environmentChangedAlert: UIAlertController {
        guard !savedEnvironment.isEmpty else { return UIAlertController() }
        
        let alert = UIAlertController(title: "Environment successfully changed.",
                                      message: "Your active environment is now: \n \(savedEnvironment)",
                                      preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Great!", style: .default, handler: nil))
        return alert
    }
    
    // MARK: - Lifecycle methods
    public override func viewDidLoad() {
        super.viewDidLoad()
...
